--- a/settings.html
+++ b/settings.html
@@ -26,18 +26,18 @@
     .grid{display:grid;grid-template-columns:repeat(7,1fr);gap:8px}
     .col{border:1px solid var(--line);border-radius:10px;padding:8px;background:#fff}
     .col h4{margin:0 0 6px}
-    .chip{display:inline-flex;gap:6px;align-items:center;border:1px solid #e0e0e0;border-radius:12px;padding:2px 8px;margin:2px 4px;background:#fafafa}
-    .chip button{border:0;background:#ffecee;color:#c62828;border-radius:8px;cursor:pointer}
   </style>
 
-  <!-- Mammoth for docx -->
+  <!-- Mammoth for DOCX -->
   <script src="https://unpkg.com/mammoth@1.8.0/mammoth.browser.min.js"></script>
 
-  <!-- Firebase -->
+  <!-- Firebase (compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
   <script>
+    // ЗАМЕНИТЕ конфиг при необходимости на ваш из Firebase Console
     const firebaseConfig = {
       apiKey: "AIzaSyAZf40tkbsHSp4bxZumIyznHcd8q_oYTKc",
       authDomain: "schedy-6f2ee.firebaseapp.com",
@@ -48,9 +48,20 @@
       measurementId: "G-Z95Q255L5L"
     };
     firebase.initializeApp(firebaseConfig);
-    const auth=firebase.auth(); const db=firebase.firestore();
-    auth.signInAnonymously().catch(console.error);
-    const SITE_ID=(location.hostname||'').replace(/\./g,'-')||'default';
+
+    // Firestore + анонимная авторизация с «ожиданием готовности»
+    const auth = firebase.auth();
+    const db   = firebase.firestore();
+    const SITE_ID = (location.hostname||'').replace(/\./g,'-') || 'default';
+
+    let _authReadyResolve;
+    const authReady = new Promise(r => { _authReadyResolve = r; });
+    auth.onAuthStateChanged(u => { if (u) { _authReadyResolve(u); } });
+    auth.signInAnonymously().catch(err => {
+      console.error('Auth error:', err);
+      const s = document.getElementById('status');
+      if (s) s.textContent = 'Auth error: ' + (err.message||err.code||err);
+    });
   </script>
 </head>
 <body>
@@ -66,7 +77,9 @@
         <input id="docxInput" type="file" accept=".docx,application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
         <span class="note" id="status">…</span>
       </div>
-      <div class="note">Формат: на отдельной строке имя, далее 7 ячеек (OFF / P / «9-21» / «9-12, 17-22» и т.п.). Комментарии после времени игнорируются.</div>
+      <div class="note">
+        Формат: отдельная строка — имя; далее для него 7 значений (OFF / P / «9-21» / «9-12, 17-22» и т.п.). Комментарии после времени игнорируются.
+      </div>
     </section>
 
     <section class="card">
@@ -88,7 +101,12 @@
       </div>
       <table id="empTable">
         <thead>
-          <tr><th>Имя</th><th>Backoffice</th><th>Смены по дням (формат: 9-12,17-22)</th><th></th></tr>
+          <tr>
+            <th>Имя</th>
+            <th>Backoffice</th>
+            <th>Смены по дням (формат: 9-12,17-22)</th>
+            <th></th>
+          </tr>
         </thead>
         <tbody></tbody>
       </table>
@@ -96,14 +114,13 @@
   </main>
 
   <script>
-    // ====== модель ======
-    let weekISO=[]; // 7 дат
-    // shifts.dX = [ {start,end,text} , ... ]
+    /* ====== модель ====== */
+    let weekISO=[]; // 7 дат ISO (YYYY-MM-DD)
+    // employees: [{name, backend, shifts:{ d0:[{start,end,text}], …, d6:[…] }}]
     let employees=[];
-
     const weekdaysFull=['ראשון','שני','שלישי','רביעי','חמישי','שישי','שבת'];
 
-    // парс док
+    /* ====== парсинг DOCX ====== */
     async function extractTextFromDocx(file){
       const ab=await file.arrayBuffer();
       const { value } = await window.mammoth.extractRawText({ arrayBuffer: ab });
@@ -144,7 +161,7 @@
     }
     function splitRanges(cell){
       if(!cell) return [];
-      // поддержим «9-12, 17-22», «9-12 17-22», «9:30-22»
+      // «9-12, 17-22» или «9-12 17-22» → несколько интервалов
       return cell.split(/[,\s]+/).map(parseOneRange).filter(Boolean);
     }
 
@@ -158,7 +175,7 @@
       for(let i=0;i<lines.length;i++){
         const line=lines[i];
         if(looksLikeName(line)){
-          // собираем 7 валидных токенов с последующих строк
+          // соберём 7 валидных значений (OFF/P/время) из последующих строк
           const vals=[]; let j=i+1;
           while(j<lines.length && vals.length<7){
             const t=lines[j].trim();
@@ -177,46 +194,67 @@
         for(let d=0; d<7; d++){
           const cell=r.values[d];
           if(/^off$/i.test(cell)){ shifts['d'+d]=[]; continue; }
-          if(/^p$/i.test(cell)){ // P → и утро и вечер без времени (условно 9-12 и 18-22)
-            shifts['d'+d]=[{start:9,end:12,text:'9-12'},{start:18,end:22,text:'18-22'}];
-            continue;
-          }
+          if(/^p$/i.test(cell)){ shifts['d'+d]=[{start:9,end:12,text:'9-12'},{start:18,end:22,text:'18-22'}]; continue; }
           shifts['d'+d]=splitRanges(cell);
         }
         return {name:r.name.trim(), backend:false, shifts};
       });
     }
 
-    // Firestore
+    /* ====== Firestore ====== */
     const COL='schedules';
-    async function loadCloud(){
-      statusEl.textContent='Loading…';
-      const snap=await db.collection(COL).doc(SITE_ID).get();
-      if(snap.exists){
-        const data=snap.data()||{};
-        if(Array.isArray(data.weekISO)) weekISO=data.weekISO;
-        if(Array.isArray(data.employees)) employees=data.employees;
-        statusEl.textContent='Loaded ✓';
-      } else {
-        statusEl.textContent='No data yet';
-      }
-      renderAll();
-    }
     let saveTimer=null;
-    function autoSave(){
+
+    async function loadCloud(){
+      const s = document.getElementById('status');
+      try{
+        if (s) s.textContent='Loading…';
+        await authReady; // ждём анонимный логин
+        const snap=await db.collection(COL).doc(SITE_ID).get();
+        if(snap.exists){
+          const data=snap.data()||{};
+          if(Array.isArray(data.weekISO)) weekISO=data.weekISO;
+          if(Array.isArray(data.employees)) employees=data.employees;
+          if (s) s.textContent='Loaded ✓';
+        } else {
+          if (s) s.textContent='No data yet';
+        }
+        renderAll();
+      }catch(err){
+        console.error('Load error:', err);
+        if (s) s.textContent = 'Load error: ' + (err.message||err.code||err);
+        alert('Ошибка чтения Firestore:\n' + (err.message||err.code||String(err)));
+      }
+    }
+
+    async function autoSave(){
       clearTimeout(saveTimer);
       saveTimer=setTimeout(async ()=>{
-        statusEl.textContent='Saving…';
-        await db.collection(COL).doc(SITE_ID).set({weekISO,employees,updatedAt:firebase.firestore.FieldValue.serverTimestamp()},{merge:true});
-        statusEl.textContent='Saved ✓';
-        renderAll(); // чтобы weekNote обновлялся
+        const s = document.getElementById('status');
+        try{
+          if (s) s.textContent='Saving…';
+          await authReady; // обязательно дождаться логина
+          await db.collection(COL).doc(SITE_ID).set({
+            weekISO,
+            employees,
+            updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+          }, { merge:true });
+          if (s) s.textContent='Saved ✓';
+          renderAll(); // обновим счётчики/надпись недели
+        }catch(err){
+          console.error('Save error:', err);
+          if (s) s.textContent = 'Save error: ' + (err.message||err.code||err);
+          alert('Ошибка сохранения в Firestore:\n' + (err.message||err.code||String(err)));
+        }
       }, 300);
     }
 
-    // UI рендер
+    /* ====== UI рендер ====== */
     const statusEl=document.getElementById('status');
     const weekGrid=document.getElementById('weekGrid');
     const weekNote=document.getElementById('weekNote');
+    const tbody=document.querySelector('#empTable tbody');
+
     function renderWeek(){
       weekGrid.innerHTML='';
       if(weekISO.length!==7){ weekNote.textContent='Неделя не определена (загрузите DOCX)'; return; }
@@ -225,7 +263,6 @@
         const col=document.createElement('div'); col.className='col';
         const h4=document.createElement('h4'); h4.textContent=`${weekdaysFull[i]} — ${new Date(weekISO[i]).toLocaleDateString('he-IL')}`;
         col.appendChild(h4);
-        // показ количества записей на день
         let total=0;
         employees.forEach(e=>{ total += (e.shifts && e.shifts['d'+i] ? e.shifts['d'+i].length : 0); });
         const p=document.createElement('div'); p.className='note'; p.textContent=`Интервалов: ${total}`;
@@ -234,7 +271,6 @@
       }
     }
 
-    const tbody=document.querySelector('#empTable tbody');
     function renderEmployees(){
       tbody.innerHTML='';
       employees.forEach((e, idx)=>{
@@ -252,7 +288,7 @@
         cb.onchange=()=>{ e.backend=cb.checked; autoSave(); };
         tdBO.appendChild(cb); tr.appendChild(tdBO);
 
-        // смены на неделю в виде 7 инпутов строк (диапазоны через запятую)
+        // смены на неделю: 7 инпутов (строка диапазонов через запятую)
         const tdShifts=document.createElement('td');
         const grid=document.createElement('div'); grid.style.display='grid'; grid.style.gridTemplateColumns='repeat(7,1fr)'; grid.style.gap='6px';
         for(let d=0; d<7; d++){
@@ -286,20 +322,21 @@
       renderEmployees();
     }
 
-    // события
+    /* ====== события ====== */
     document.getElementById('docxInput').onchange = async (e)=>{
       const f=e.target.files?.[0]; if(!f) return;
       try{
         statusEl.textContent='Parsing…';
         const raw = await extractTextFromDocx(f);
         parseFromRaw(raw);
-        autoSave();
+        autoSave(); // сохранит в Firestore после authReady
       }catch(err){
         console.error(err);
         alert('Ошибка чтения/парсинга DOCX: '+err.message);
         statusEl.textContent='Error';
       }
     };
+
     document.getElementById('btnAdd').onclick=()=>{
       const name=(document.getElementById('newName').value||'').trim();
       const bo=document.getElementById('newBO').checked;
