--- a/settings.html
+++ b/settings.html
@@ -41,7 +41,7 @@
     const firebaseConfig = {
       apiKey: "AIzaSyAZf40tkbsHSp4bxZumIyznHcd8q_oYTKc",
       authDomain: "schedy-6f2ee.firebaseapp.com",
-      projectId: "schedy-6f2ee",
+      projectId: "keen-berm-470615-h6",
       storageBucket: "schedy-6f2ee.firebasestorage.app",
       messagingSenderId: "932938489528",
       appId: "1:932938489528:web:977813cc1d8d7891eb1e4d",
