--- a/settings.html
+++ b/settings.html
@@ -38,15 +38,15 @@
 
   <script>
     // ЗАМЕНИТЕ конфиг при необходимости на ваш из Firebase Console
-    const firebaseConfig = {
-      apiKey: "AIzaSyAZf40tkbsHSp4bxZumIyznHcd8q_oYTKc",
-      authDomain: "schedy-6f2ee.firebaseapp.com",
-      projectId: "keen-berm-470615-h6",
-      storageBucket: "schedy-6f2ee.firebasestorage.app",
-      messagingSenderId: "932938489528",
-      appId: "1:932938489528:web:977813cc1d8d7891eb1e4d",
-      measurementId: "G-Z95Q255L5L"
-    };
+ const firebaseConfig = {
+    apiKey: "AlzaSyC6651JMpQhj9FVoqKb_kRnd0r6prZ9kY",   // из скрина
+    authDomain: "keen-berm-470615-h6.firebaseapp.com",
+    projectId: "keen-berm-470615-h6",  
+    storageBucket: "keen-berm-470615-h6.appspot.com",
+    messagingSenderId: "772648903570"
+  // appId: "1:772648903570:web:XXXXXXXXXXXXXX" // появится после регистрации Web app
+  // measurementId: "G-XXXXXXXXXX"             // только если включишь Analytics
+  };
     firebase.initializeApp(firebaseConfig);
 
     // Firestore + анонимная авторизация с «ожиданием готовности»
