--- a/settings.html
+++ b/settings.html
@@ -39,14 +39,14 @@
   <script>
     // ЗАМЕНИТЕ конфиг при необходимости на ваш из Firebase Console
  const firebaseConfig = {
-    apiKey: "AlzaSyC6651JMpQhj9FVoqKb_kRnd0r6prZ9kY",   // из скрина
-    authDomain: "keen-berm-470615-h6.firebaseapp.com",
-    projectId: "keen-berm-470615-h6",  
-    storageBucket: "keen-berm-470615-h6.appspot.com",
-    messagingSenderId: "772648903570"
-  // appId: "1:772648903570:web:XXXXXXXXXXXXXX" // появится после регистрации Web app
-  // measurementId: "G-XXXXXXXXXX"             // только если включишь Analytics
-  };
+  apiKey: "AIzaSyC6651JMpQhj9FVoqKb_kRndo1r6prZ9kY",
+  authDomain: "keen-berm-470615-h6.firebaseapp.com",
+  projectId: "keen-berm-470615-h6",
+  storageBucket: "keen-berm-470615-h6.firebasestorage.app",
+  messagingSenderId: "772648903570",
+  appId: "1:772648903570:web:4aa21c0da258c82d52d74b",
+  measurementId: "G-7VGNRGC0G7"
+};
     firebase.initializeApp(firebaseConfig);
 
     // Firestore + анонимная авторизация с «ожиданием готовности»
