--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAZf40tkbsHSp4bxZumIyznHcd8q_oYTKc",
-      authDomain: "schedy-6f2ee.firebaseapp.com",
-      projectId: "schedy-6f2ee",
-      storageBucket: "schedy-6f2ee.firebasestorage.app",
-      messagingSenderId: "932938489528",
-      appId: "1:932938489528:web:977813cc1d8d7891eb1e4d",
-      measurementId: "G-Z95Q255L5L"
-    };
+const firebaseConfig = {
+    apiKey: "AIzaSyC6651JMpQhj9FVoqKb_kRndo1r6prZ9kY",
+    authDomain: "keen-berm-470615-h6.firebaseapp.com",
+    projectId: "keen-berm-470615-h6",  
+    storageBucket: "keen-berm-470615-h6.firebasestorage.app",
+    messagingSenderId: "772648903570",
+    appId: "1:772648903570:web:4aa21c0da258c82d52d74b",
+    measurementId: "G-7VGNRGC0G7"
+  };
     firebase.initializeApp(firebaseConfig);
     const auth=firebase.auth(); const db=firebase.firestore();
     auth.signInAnonymously().catch(console.error);
